--- a/src/app/Components/heroes-lists/heroes-lists.component.css
+++ b/src/app/Components/heroes-lists/heroes-lists.component.css
@@ -1,19 +1,74 @@
 span{
     font-weight: bold;
-    text-align: center;
+    
 }
 
 label{
     font-weight: bold;
-    text-align: center;
+
 }
 
-h2{
-    text-align: center;
+h2 {
     text-align: center;
 }
 
 div{
     margin-bottom: 15px;
-    text-align: center;
+    
 }
+
+.span-id {
+    color: red;
+}
+
+.span-name {
+    color: red;
+}
+
+.heroes {
+    margin: 0 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width: 17em;
+  }
+  
+  .heroes li {
+    display: flex;
+  }
+  
+  .heroes button {
+    flex: 1;
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    background-color: #EEE;
+    margin: .5em;
+    padding: 0;
+    border-radius: 4px;
+    display: flex;
+    align-items: stretch;
+    
+   
+
+  }
+  
+  .heroes .badge {
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.5em 0.7em 0 0.5em;
+    background-color: #405061;
+    line-height: 1em;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
+  }
+  
+  .heroes .name {
+    align-self: center;
+  }
+
+ input {
+    width: 90px
+ }
+  
+  
